syntax = "proto3";

package tools;
option go_package = "./;tools";

service TimerTask {
  rpc SetTaskStreamingMessage(setTaskReq) returns (stream setTaskRes) {};
}

enum TaskStatus {
  BEGIN = 0;
  END = 1;
  CANCEL = 2;
}


message setTaskRes {
  string name = 1;
  string version = 2;
  TaskStatus status = 3;
}

message setTaskReq {}